--- a/.env.development
+++ b/.env.development
@@ -2,3 +2,4 @@
 ENV = 'development'
 VUE_APP_BASEURL="/"
 VUE_APP_GIS_API = "http://localhost:6060/gisdata"
+VUE_TDT_KEY = '1a5973cbd371ba8fec73442bbde8b138'
