--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,5 @@
 ENV = 'production'
 VUE_APP_BASEURL="/"
 VUE_APP_GIS_API = "https://gfkd-dev.daspatial.com/gisdata"
-
+VUE_TDT_KEY = '1a5973cbd371ba8fec73442bbde8b138'
 
