--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,5 @@
 ENV = 'development'
 VUE_APP_BASEURL="/"
 VUE_APP_GIS_API = "http://localhost:6060/gisdata"
+VUE_APP_MODEL_API = "http://localhost:6060/modelView"
 VUE_APP_TDT_KEY = '0d85a621fd7f80173ea848b1951c270e'
